[gd_scene load_steps=42 format=2]

[ext_resource path="res://assets/pc_screen.png" type="Texture" id=1]
[ext_resource path="res://Scenes/room/Terminal.gd" type="Script" id=2]
[ext_resource path="res://Scenes/room/JamSelection.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Pitta_walking-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Nene_walking-Sheet.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Pika_walking-Sheet.png" type="Texture" id=6]
[ext_resource path="res://Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Fonts/buybutton.tres" type="DynamicFont" id=8]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0470588, 0.0784314, 0.894118, 0.356863 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.803922, 0.776471, 0.0431373, 0.196078 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Fonts/PressStart2P-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0980392, 0.113725, 0.635294, 0.564706 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "2",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 1, 0.431373, 0.0156863, 0.52549 )

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.886275, 0.141176, 0.141176, 0.521569 )

[sub_resource type="InputEventKey" id=27]
scancode = 44

[sub_resource type="ShortCut" id=28]
shortcut = SubResource( 27 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.0352941, 0.0156863, 0.968627, 1 )

[sub_resource type="StyleBoxEmpty" id=30]

[sub_resource type="StyleBoxEmpty" id=31]

[sub_resource type="StyleBoxEmpty" id=32]

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0.0705882, 0.705882, 0.87451, 1 )

[node name="PopupPanel" type="PopupPanel"]
margin_right = 608.0
margin_bottom = 608.0
theme = SubResource( 2 )
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.00164474
anchor_right = 0.00164474
margin_left = 3.0
margin_top = 4.0
margin_right = 603.0
margin_bottom = 604.0
rect_min_size = Vector2( 600, 600 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bowser" type="TabContainer" parent="TextureRect"]
anchor_left = 0.113333
anchor_top = 0.126667
anchor_right = 0.886667
anchor_bottom = 0.786667
margin_bottom = 4.0
rect_min_size = Vector2( 460, 400 )
custom_styles/tab_fg = SubResource( 3 )
custom_styles/tab_disabled = SubResource( 4 )
custom_styles/tab_bg = SubResource( 5 )
custom_styles/panel = SubResource( 6 )
tab_align = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Jams" type="HBoxContainer" parent="TextureRect/Bowser"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jams" type="VBoxContainer" parent="TextureRect/Bowser/Jams"]
margin_right = 230.0
margin_bottom = 384.0
rect_min_size = Vector2( 200, 380 )
custom_constants/separation = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jam" parent="TextureRect/Bowser/Jams/Jams" instance=ExtResource( 3 )]
margin_top = 163.0
margin_right = 230.0
margin_bottom = 173.0
text = "Jam do Cluble da Galera"
info = "Um pouco de treino com a galera do clube da jam, para aprender e desenvolver alguma mecânica nova"

[node name="Jam1" parent="TextureRect/Bowser/Jams/Jams" instance=ExtResource( 3 )]
margin_top = 179.0
margin_right = 230.0
margin_bottom = 189.0
disabled = true
text = "GMTK"
info = "GMTK jam. Abrem em dias mútliplos de 4"
cover = "res://assets/fVS+lk.png"

[node name="Jam2" parent="TextureRect/Bowser/Jams/Jams" instance=ExtResource( 3 )]
margin_top = 195.0
margin_right = 230.0
margin_bottom = 205.0
disabled = true
text = "Ludum Darem"
info = "Ludum Dare jam. Abre em dias múltiplos de 7"
cover = "res://assets/Ludum_Dare_Logo.png"

[node name="Jam3" parent="TextureRect/Bowser/Jams/Jams" instance=ExtResource( 3 )]
margin_top = 211.0
margin_right = 230.0
margin_bottom = 221.0
disabled = true
text = "Game Jaaj"
info = "Game Jaaj. Abre em dias múltiplos de 10"
cover = "res://assets/qjCza6.png"

[node name="Info" type="VBoxContainer" parent="TextureRect/Bowser/Jams"]
margin_left = 234.0
margin_right = 464.0
margin_bottom = 384.0
rect_min_size = Vector2( 230, 380 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="JamCover" type="TextureRect" parent="TextureRect/Bowser/Jams/Info"]
margin_right = 230.0
margin_bottom = 187.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 1

[node name="JamInfo" type="RichTextLabel" parent="TextureRect/Bowser/Jams/Info"]
margin_top = 197.0
margin_right = 230.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 8 )

[node name="Responsavel" type="Panel" parent="TextureRect/Bowser"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
rect_min_size = Vector2( 460, 370 )
custom_styles/panel = SubResource( 9 )

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/Bowser/Responsavel"]
anchor_left = 0.0431034
anchor_top = 0.0520833
anchor_right = 0.969828
anchor_bottom = 0.947917
margin_right = -6.0
rect_min_size = Vector2( 440, 345 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Player" type="VBoxContainer" parent="TextureRect/Bowser/Responsavel/HBoxContainer"]
margin_right = 250.0
margin_bottom = 345.0
rect_min_size = Vector2( 250, 0 )

[node name="Player" type="CenterContainer" parent="TextureRect/Bowser/Responsavel/HBoxContainer/Player"]
margin_right = 250.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 250 )

[node name="Sprite" type="AnimatedSprite" parent="TextureRect/Bowser/Responsavel/HBoxContainer/Player/Player"]
position = Vector2( 125, 125 )
frames = SubResource( 22 )
animation = "3"
frame = 2
playing = true

[node name="Player1" type="Button" parent="TextureRect/Bowser/Responsavel/HBoxContainer/Player"]
margin_top = 254.0
margin_right = 250.0
margin_bottom = 276.0
text = "Artista"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" type="Button" parent="TextureRect/Bowser/Responsavel/HBoxContainer/Player"]
margin_top = 280.0
margin_right = 250.0
margin_bottom = 302.0
text = "Programador"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player3" type="Button" parent="TextureRect/Bowser/Responsavel/HBoxContainer/Player"]
margin_top = 306.0
margin_right = 250.0
margin_bottom = 328.0
text = "Músico"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="VBoxContainer" parent="TextureRect/Bowser/Responsavel/HBoxContainer"]
margin_left = 254.0
margin_right = 440.0
margin_bottom = 345.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="GridContainer" type="VBoxContainer" parent="TextureRect/Bowser/Responsavel/HBoxContainer/Info"]
margin_right = 186.0
margin_bottom = 155.0
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 1

[node name="Hp" type="Label" parent="TextureRect/Bowser/Responsavel/HBoxContainer/Info/GridContainer"]
margin_right = 186.0
margin_bottom = 16.0
text = "Hp: []"

[node name="BuyHp" type="Button" parent="TextureRect/Bowser/Responsavel/HBoxContainer/Info/GridContainer"]
margin_top = 26.0
margin_right = 186.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 8 )
text = "buy: [xp]"

[node name="Mp" type="Label" parent="TextureRect/Bowser/Responsavel/HBoxContainer/Info/GridContainer"]
margin_top = 55.0
margin_right = 186.0
margin_bottom = 71.0
text = "Mp: []"

[node name="BuyMp" type="Button" parent="TextureRect/Bowser/Responsavel/HBoxContainer/Info/GridContainer"]
margin_top = 81.0
margin_right = 186.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 8 )
text = "buy: [xp]"

[node name="Special" type="Label" parent="TextureRect/Bowser/Responsavel/HBoxContainer/Info/GridContainer"]
visible = false
margin_top = 110.0
margin_right = 186.0
margin_bottom = 126.0
text = "Special: []"

[node name="BuySpecial" type="Button" parent="TextureRect/Bowser/Responsavel/HBoxContainer/Info/GridContainer"]
visible = false
margin_top = 136.0
margin_right = 186.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 8 )
text = "buy: [xp]"

[node name="Damage" type="Label" parent="TextureRect/Bowser/Responsavel/HBoxContainer/Info/GridContainer"]
margin_top = 110.0
margin_right = 186.0
margin_bottom = 126.0
text = "dano: []"

[node name="BuyDamage" type="Button" parent="TextureRect/Bowser/Responsavel/HBoxContainer/Info/GridContainer"]
margin_top = 136.0
margin_right = 186.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 8 )

[node name="TotalXp" type="Label" parent="TextureRect/Bowser/Responsavel/HBoxContainer/Info"]
margin_top = 175.0
margin_right = 186.0
margin_bottom = 191.0
text = "Total Exp:"

[node name="TextureButton" type="Button" parent="TextureRect"]
anchor_left = 0.714854
anchor_top = 0.873729
anchor_right = 0.895775
anchor_bottom = 0.939519
margin_left = 1.71884
margin_top = 2.98981
margin_right = 3.1662
margin_bottom = 3.51617
rect_min_size = Vector2( 110, 40 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
shortcut_in_tooltip = false
shortcut = SubResource( 28 )
text = "Desliga"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Play" type="Button" parent="TextureRect"]
margin_left = 412.406
margin_top = 74.7298
margin_right = 526.406
margin_bottom = 104.73
rect_min_size = Vector2( 115, 30 )
custom_styles/hover = SubResource( 29 )
custom_styles/pressed = SubResource( 30 )
custom_styles/focus = SubResource( 31 )
custom_styles/disabled = SubResource( 32 )
custom_styles/normal = SubResource( 33 )
text = "jogar"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TextureRect/Bowser/Jams/Jams/Jam" to="." method="_on_Jam_pressed"]
[connection signal="pressed" from="TextureRect/Bowser/Jams/Jams/Jam1" to="." method="_on_Jam1_pressed"]
[connection signal="pressed" from="TextureRect/Bowser/Jams/Jams/Jam2" to="." method="_on_Jam2_pressed"]
[connection signal="pressed" from="TextureRect/Bowser/Jams/Jams/Jam3" to="." method="_on_Jam3_pressed"]
[connection signal="pressed" from="TextureRect/Bowser/Responsavel/HBoxContainer/Player/Player1" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TextureRect/Bowser/Responsavel/HBoxContainer/Player/Player2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="TextureRect/Bowser/Responsavel/HBoxContainer/Player/Player3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="TextureRect/Bowser/Responsavel/HBoxContainer/Info/GridContainer/BuyHp" to="." method="_on_BuyHp_pressed"]
[connection signal="pressed" from="TextureRect/Bowser/Responsavel/HBoxContainer/Info/GridContainer/BuyMp" to="." method="_on_BuyMp_pressed"]
[connection signal="pressed" from="TextureRect/Bowser/Responsavel/HBoxContainer/Info/GridContainer/BuySpecial" to="." method="_on_BuySpecial_pressed"]
[connection signal="pressed" from="TextureRect/Bowser/Responsavel/HBoxContainer/Info/GridContainer/BuyDamage" to="." method="_on_BuyDamage_pressed"]
[connection signal="pressed" from="TextureRect/Play" to="." method="_on_Play_pressed"]
